fixed code tag style disable white-space:nowrap;

--- a/themes/markdown.less
+++ b/themes/markdown.less
@@ -137,7 +137,7 @@
     .code;
     
     border: 1px solid @border-color;
-    white-space: nowrap;
+    //white-space: nowrap;
     padding: 0 5px;
     margin: 0 2px;
   }
